@@ -39,6 +39,8 @@
 	svyvar() computes sample size 'n' in the same way for na.rm=TRUE as for a domain
 	(for Raymond Pan)
 
+	xdesign() for crossed designs (which aren't strictly surveys, but are basically similar) 
+
 4.1-1	CRAN
 
 4.1	svyquantile() has been COMPLETELY REWRITTEN. The old version is available
